<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">winfusion</string>
    <string name="home">Home</string>
    <string name="containers">Containers</string>
    <string name="test">Test</string>
    <string name="invalid_input">Invalid input</string>
    <string name="container">Container</string>
    <string name="display">Display</string>
    <string name="audio">Audio</string>
    <string name="graphics">Graphics</string>
    <string name="graphics_driver">Graphics driver</string>
    <string name="debug">Debug</string>
    <string name="wine">Wine</string>
    <string name="box64">Box64</string>
    <string name="controller">Controller</string>
    <string name="tools">Tools</string>
    <string name="vulkan">Vulkan</string>
    <string name="opengl">OpenGL</string>
    <string name="directx_wrapper">DirectX Wrapper</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="path">Path</string>
    <string name="_import">Import</string>
    <string name="container_name">Container name</string>
    <string name="shortcut_name">Shortcut name</string>
    <string name="container_work_dir">Container working directory</string>
    <string name="creation_date">Creation date</string>
    <string name="wine_version_at_creation">Wine version at creation</string>
    <string name="lnk_name">Lnk name</string>
    <string name="uuid">UUID</string>
    <string name="region">Region</string>
    <string name="container_settings">Container settings</string>
    <string name="shortcut_settings">Shortcut settings</string>
    <string name="resolution">Resolution</string>
    <string name="screen_orientation">Screen orientation</string>
    <string name="scaling_mode">Scaling mode</string>
    <string name="refresh_rate">Refresh rate</string>
    <string name="key">Key</string>
    <string name="scale">Scale</string>
    <string name="opacity">Opacity</string>
    <string name="landscape">Landscape</string>
    <string name="portrait">Portrait</string>
    <string name="original">Original</string>
    <string name="fit">Fit</string>
    <string name="stretch">Stretch</string>
    <string name="alsa">ALSA</string>
    <string name="pulse_audio">PulseAudio</string>
    <string name="audio_driver">Audio driver</string>
    <string name="audio_backend">Audio backend</string>
    <string name="audio_volume_gain">Audio volume gain</string>
    <string name="soundfont">Soundfont</string>
    <string name="midi_soundfont">MIDI Soundfont</string>
    <string name="midi_volume_gain">MIDI volume gain</string>
    <string name="reset">Reset</string>
    <string name="reset_setting_to_default">Do you want to reset this setting to its default value?</string>
    <string name="choose_vulkan_driver">Choose vulkan driver</string>
    <string name="config_vulkan_driver">Configure vulkan driver</string>
    <string name="choose_opengl_driver">Choose opengl driver</string>
    <string name="config_opengl_driver">Configure opengl driver</string>
    <string name="choose_directx_8_11_wrapper" tools:ignore="TypographyDashes">Choose DirectX 8-11 wrapper</string>
    <string name="choose_directx_12_wrapper">Choose DirectX 12 wrapper</string>
    <string name="config_directx_wrapper">Configure DirectX wrapper</string>
    <string name="choose_wine">Choose Wine</string>
    <string name="choose_box64">Choose Box64</string>
    <string name="empty_container_list_description">No containers found. Please create one first.</string>
    <string name="empty_shortcut_list_description">No shortcuts found. Please create one in a container first.</string>
    <string name="empty_content_list_description">No contents found. Please install one first.</string>
    <string name="contents_manager">Contents Manager</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="start">Start</string>
    <string name="error">Error</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="type">Type</string>
    <string name="decimal">Decimal</string>
    <string name="hexadecimal">Hexadecimal</string>
    <string name="edit">Edit</string>
    <string name="item">Item</string>
    <string name="_new">New</string>
    <string name="rename">Rename</string>
    <string name="export">Export</string>
    <string name="target_file_path">Target file path</string>
    <string name="settings">Settings</string>
    <string name="container_settings_description">Edit settings specific to this container</string>
    <string name="shortcut_settings_description">Edit settings specific to this shortcut</string>
    <string name="install">Install</string>
    <string name="all">All</string>
    <string name="info">Info</string>
    <string name="container_info_description">Container Name, region, creation date</string>
    <string name="shortcut_info_description">Shortcut Name, exec arguments, region</string>
    <string name="use_container_setting">Use container setting</string>
    <string name="registry_editor">Registry Editor</string>
    <string name="registry_editor_description">View and edit the container registry.</string>
    <string name="open_in_file_manager">Open in file manager</string>
    <string name="open_in_file_manager_description">Open container\'s drive in system file manager.</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="create_shortcut_description">Choose a file from the container\'s drive to create a shortcut.</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_description">Clear unused cache files created during runtime.</string>
    <string name="duplicate">Duplicate</string>
    <string name="duplicate_container_description">Create a duplicate of the container\'s C drive and its settings.</string>
    <string name="delete">Delete</string>
    <string name="delete_container_description">Permanently delete the container\'s settings and C drive.</string>
    <string name="delete_container_warning_description">This irrecoverably removes all of files from this container\'s C drive and its settings. Please enter container\'s name to delete it.</string>
    <string name="registry_not_found_description">Registry not found. Please start the container first.</string>
    <string name="registry_need_save_description">Registry has been modified. Do you want to save the changes?</string>
    <string name="registry_default">(Default)</string>
    <string name="unset">Unset</string>
    <string name="unsupported">Unsupported</string>
    <string name="details">Details</string>
    <string name="loading">Loading…</string>
    <string name="installing">Installing…</string>
    <string name="name_invalid_description">Name is invalid.</string>
    <string name="name_duplicate_description">Name is already exist.</string>
    <string name="edit_registry_item">Edit registry item</string>
    <string name="edit_registry_value">Edit registry value</string>
    <string name="export_to_reg">Export to .reg</string>
    <string name="delete_registry_item_description">Do you want to delete this registry item and all its subkeys?</string>
    <string name="delete_registry_value_description">Do you want to delete this registry value?</string>
    <string name="registry_type_sz">String Value</string>
    <string name="registry_type_binary">Binary Value</string>
    <string name="registry_type_dword">DWORD (32-bit) Value</string>
    <string name="registry_type_qword">QWORD (64-bit) Value</string>
    <string name="registry_type_multi_sz">Multi-String Value</string>
    <string name="registry_type_expand_sz">Expandable String Value</string>
    <string name="jump_to_key">Jump to key</string>
    <string name="invalid_registry_key">Invalid registry key.</string>
    <string name="invalid_input_decimal_description">Invalid input: Please enter a numeric value.</string>
    <string name="invalid_input_hexadecimal_description">Invalid input: Please enter a hexadecimal value, e.g., 0xFF.</string>
    <string name="dword_decimal_range_description">Valid range: 0 to 4,294,967,295.</string>
    <string name="dword_hexadecimal_range_description">Valid range: 0x0 to 0xFFFFFFFF.</string>
    <string name="qword_decimal_range_description">Valid range: 0 to 18,446,744,073,709,551,615.</string>
    <string name="qword_hexadecimal_range_description">Valid range: 0x0 to 0xFFFFFFFFFFFFFFFF.</string>
    <string name="invalid_input_binary_description">Invalid input: Please enter hexadecimal byte values, e.g., 1A 2F.</string>
    <string name="invalid_input_string_description">Invalid input: Line breaks (CRLF, LF) are not allowed.</string>
    <string name="invalid_input_multi_string_description">Invalid input: Empty strings are not allowed.</string>
    <string name="container_name_description">Name of the container displayed in the menu.</string>
    <string name="container_creation_time_description">The time when the container\'s configuration file was created.</string>
    <string name="container_wine_version_at_creation_description">Version of Wine used when the container was first startup.</string>
    <string name="container_uuid_description">Unique identifier of the container.</string>
    <string name="container_display_description">Resolution, refresh rate, scaling mode, orientation</string>
    <string name="display_resolution_description">Screen size of the virtual display.</string>
    <string name="display_scaling_mode_description">Method of virtual display adapting to the screen.</string>
    <string name="display_refresh_rate_description">Refresh rate of the virtual display. (Hz)</string>
    <string name="refresh_rate_warning_description">The refresh rate must be between 30 and 1000.</string>
    <string name="container_audio_description">Audio driver, volume, midi synthesizer</string>
    <string name="midi">MIDI</string>
    <string name="choose_soundfont">Choose soundfont</string>
    <string name="audio_midi_soundfont_description">Soundfont for MIDI synthesizer.</string>
    <string name="audio_midi_volume_gain_description">Specific volume gain for MIDI synthesizer.</string>
    <string name="audio_volume_gain_description">Specific volume gain for audio backend.</string>
    <string name="exec_args">Exec arguments</string>
    <string name="container_graphics_description">OpenGL, Vulkan, DirectX</string>
    <string name="graphics_directx8_11_description">Required to run most Windows games and software.</string>
    <string name="graphics_directx12_description">Required to run the latest Windows games.</string>
    <string name="graphics_opengl_driver_description">Provides OpenGL implementation, required by WineD3D.</string>
    <string name="graphics_vulkan_driver_description">Provides Vulkan implementation, required by DXVK, VKD3D and Zink.</string>
    <string name="null_data">(unknown)</string>
    <string name="sound_engine">Sound engine</string>
    <string name="version">Version</string>
    <string name="profile">Profile</string>
    <string name="shape">Shape</string>
    <string name="binding">Binding</string>
    <string name="toggle_switch">Toggle switch</string>
    <string name="text">Text</string>
    <string name="binding_up">Binding up</string>
    <string name="binding_down">Binding down</string>
    <string name="binding_left">Binding left</string>
    <string name="binding_right">Binding right</string>
    <string name="dpad_8way_mode">DPad 8-way mode</string>
    <string name="stick_8way_mode">Stick 8-way mode</string>
    <string name="invert_x_axis">Invert X axis</string>
    <string name="invert_y_axis">Invert Y axis</string>
    <string name="switch_to_preview">Switch to preview</string>
    <string name="binding_mode">Binding mode</string>
    <string name="left_thumb_stick">Left thumb stick</string>
</resources>