<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:background="?attr/colorOverlayEditorSecondary">

    <com.google.android.material.textview.MaterialTextView
        style="?attr/textAppearanceBodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/binding_mode"
        android:textColor="?attr/colorOverlayEditorOnSecondary" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/WinfusionTheme.OverlayEditor.TextInputLayout.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/auto_text_mode"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:textColor="?attr/colorOverlayEditorOnSecondary"
            android:textSize="14sp"
            tools:text="@string/left_thumb_stick" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/group_input_invert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/invert_x_axis"
                android:textColor="?attr/colorOverlayEditorOnSecondary" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_invert_x"
                style="?materialSwitchStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/invert_y_axis"
                android:textColor="?attr/colorOverlayEditorOnSecondary" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_invert_y"
                style="?materialSwitchStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/group_dir_binding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            style="?attr/textAppearanceBodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/binding_up"
            android:textColor="?attr/colorOverlayEditorOnSecondary" />

        <include
            android:id="@+id/bind_up"
            layout="@layout/list_item_binding" />

        <com.google.android.material.textview.MaterialTextView
            style="?attr/textAppearanceBodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/binding_down"
            android:textColor="?attr/colorOverlayEditorOnSecondary" />

        <include
            android:id="@+id/bind_down"
            layout="@layout/list_item_binding" />

        <com.google.android.material.textview.MaterialTextView
            style="?attr/textAppearanceBodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/binding_left"
            android:textColor="?attr/colorOverlayEditorOnSecondary" />

        <include
            android:id="@+id/bind_left"
            layout="@layout/list_item_binding" />

        <com.google.android.material.textview.MaterialTextView
            style="?attr/textAppearanceBodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/binding_right"
            android:textColor="?attr/colorOverlayEditorOnSecondary" />

        <include
            android:id="@+id/bind_right"
            layout="@layout/list_item_binding" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stick_8way_mode"
                android:textColor="?attr/colorOverlayEditorOnSecondary" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_8way"
                style="?materialSwitchStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
